used older version of hive.js since the latest one is buggy

--- a/index.html
+++ b/index.html
@@ -84,10 +84,9 @@
     integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
     crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/steem/dist/steem.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/@hiveio/hive-js/dist/hive.min.js"></script>
   <script src="https://unpkg.com/dsteem@^0.10.1/dist/dsteem.js"></script>
     <script src="https://cdn.jsdelivr.net/simplemde/latest/simplemde.min.js"></script>
-
+    <script src="js/hive.min.js"></script>
   <script src="js/App.js"></script>
 </body>
 
